[gd_scene load_steps=5 format=3 uid="uid://csok1g3nwjo8n"]

[ext_resource type="Texture2D" uid="uid://cpuiwyarvscfc" path="res://Sprites/grassy_background.png" id="1_7fivd"]
[ext_resource type="Script" path="res://Scripts/chicken_game.gd" id="1_roq6h"]
[ext_resource type="PackedScene" uid="uid://bajv4muhbjuf" path="res://Scenes/chicken.tscn" id="2_1ysnb"]
[ext_resource type="Theme" uid="uid://tccwucovtioo" path="res://Shaders/close_button.tres" id="3_wro8v"]

[node name="ChickenGame" type="CanvasLayer"]
offset = Vector2(576, 324)
transform = Transform2D(1, 0, 0, 1, 576, 324)
script = ExtResource("1_roq6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_7fivd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2(4, 4)
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-64, -64)
polygon = PackedVector2Array(3, 128, 128, 128, 128, 12, 3, 12, 3, 140, -9, 140, -9, -6, 140, -6, 140, 140, 3, 140)

[node name="Chickens" type="Node2D" parent="."]
scale = Vector2(4, 4)

[node name="Chicken" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(-2.66667, 1.66666)
clickable = true

[node name="Chicken2" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(-40.6667, 14.6667)
clickable = true

[node name="Chicken3" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(42.3333, 29.6667)
clickable = true

[node name="Chicken4" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(22.3333, -18.3333)
clickable = true

[node name="Chicken5" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(-4.66667, 30.6667)
clickable = true

[node name="Chicken6" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(-30.6667, -17.3333)
clickable = true

[node name="Chicken7" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(32.3333, 9.66666)
clickable = true

[node name="Chicken8" parent="Chickens" instance=ExtResource("2_1ysnb")]
position = Vector2(2.33333, -32.3333)
clickable = true

[node name="Button" type="Button" parent="."]
offset_left = 212.0
offset_top = -275.0
offset_right = 228.0
offset_bottom = -259.0
scale = Vector2(4, 4)
theme = ExtResource("3_wro8v")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
